small correction to game elements, no characters needed"

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <main>
       <h1>SnakeGame</h1>
       <section id="box">
-        <div id="snake">_</div>
-        <div id="food">.</div>
+        <div id="snake"></div>
+        <div id="food"></div>
       </section>
     </main>
   </body>
